--- a/app/package.json
+++ b/app/package.json
@@ -62,7 +62,7 @@
                             "entryPoints": [
                                 {
                                     "html": "./public/index.html",
-                                    "js": "./src/renderer/app.tsx",
+                                    "js": "./src/renderer",
                                     "name": "main_window"
                                 }
                             ]
@@ -80,6 +80,7 @@
         "@electron-forge/maker-zip": "6.0.0-beta.51",
         "@electron-forge/plugin-webpack": "6.0.0-beta.51",
         "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+        "@types/styled-components": "^5.1.0",
         "@typescript-eslint/eslint-plugin": "^2.30.0",
         "@typescript-eslint/parser": "^2.30.0",
         "css-loader": "^3.0.0",
@@ -103,6 +104,8 @@
         "@types/react-dom": "^16.9.7",
         "electron-squirrel-startup": "^1.0.0",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react-dom": "^16.13.1",
+        "styled-components": "^5.1.0",
+        "styled-normalize": "^8.0.7"
     }
 }
