--- a/app/package.json
+++ b/app/package.json
@@ -104,6 +104,7 @@
         "@types/react": "^16.9.34",
         "@types/react-dom": "^16.9.7",
         "electron-squirrel-startup": "^1.0.0",
+        "framer-motion": "^1.10.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2",
