--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,9 @@
         "package": "electron-forge package",
         "make": "electron-forge make",
         "publish": "electron-forge publish",
-        "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+        "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+        "test": "jest",
+        "test:watch": "jest --watch"
     },
     "keywords": [],
     "author": {
@@ -80,6 +82,8 @@
         "@electron-forge/maker-zip": "6.0.0-beta.51",
         "@electron-forge/plugin-webpack": "6.0.0-beta.51",
         "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+        "@testing-library/jest-dom": "^5.7.0",
+        "@testing-library/react": "^10.0.4",
         "@types/react-router-dom": "^5.1.5",
         "@types/styled-components": "^5.1.0",
         "@typescript-eslint/eslint-plugin": "^2.30.0",
@@ -93,10 +97,12 @@
         "eslint-plugin-react": "^7.19.0",
         "fork-ts-checker-webpack-plugin": "^3.1.1",
         "husky": "^4.2.5",
+        "jest": "^26.0.1",
         "lint-staged": "^10.2.2",
         "node-loader": "^0.6.0",
         "prettier": "^2.0.5",
         "style-loader": "^0.23.1",
+        "ts-jest": "^25.5.1",
         "ts-loader": "^6.2.1",
         "typescript": "^3.7.0"
     },
