--- a/app/package.json
+++ b/app/package.json
@@ -84,6 +84,7 @@
         "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
         "@testing-library/jest-dom": "^5.7.0",
         "@testing-library/react": "^10.0.4",
+        "@types/phoenix": "^1.4.4",
         "@types/react-router-dom": "^5.1.5",
         "@types/styled-components": "^5.1.0",
         "@typescript-eslint/eslint-plugin": "^2.30.0",
@@ -111,11 +112,13 @@
         "@types/react-dom": "^16.9.7",
         "electron-squirrel-startup": "^1.0.0",
         "framer-motion": "^1.10.3",
+        "phoenix": "^1.5.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-router-dom": "^5.1.2",
         "styled-components": "^5.1.0",
         "styled-normalize": "^8.0.7",
+        "swr": "^0.2.0",
         "unfetch": "^4.1.0"
     }
 }
