--- a/app/package.json
+++ b/app/package.json
@@ -111,7 +111,7 @@
         "@types/react": "^16.9.34",
         "@types/react-dom": "^16.9.7",
         "electron-squirrel-startup": "^1.0.0",
-        "framer-motion": "^1.10.3",
+        "framer-motion": "^2.0.0-beta.71",
         "phoenix": "^1.5.1",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
