--- a/app/package.json
+++ b/app/package.json
@@ -86,6 +86,7 @@
         "@testing-library/react": "^10.0.4",
         "@types/phoenix": "^1.4.4",
         "@types/react-router-dom": "^5.1.5",
+        "@types/spotify-web-playback-sdk": "^0.1.7",
         "@types/styled-components": "^5.1.0",
         "@typescript-eslint/eslint-plugin": "^2.30.0",
         "@typescript-eslint/parser": "^2.30.0",
